--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,8 +11,14 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "dotenv": "^16.4.5",
+    "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.11"
   }
 }
