--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "@masvio/uploader": "^2.2.1",
+    "axios": "^1.7.7",
     "cors": "^2.8.5"
   }
 }
